# dcgan-quickdraw

./: .gitignore  Makefile  README.md  params.yaml  pyproject.toml
.github/workflows/: ci.yaml
docs/: mkdocs.yml
docs/docs/: index.md
mlflow-server/: cmd.txt  compose.yaml
mlflow-server/nginx/: nginx.conf
mlflow-server/tests/: test_mlflow_server.py
models/: discriminator.pkl  gan_artifact.pth  generator.pkl
notebooks/: quick_start.ipynb
notebooks/mlruns/0/: meta.yaml
references/: VAEs_doc.md
src/: config.py  dataset.py  features.py  plots.py
src/modeling/: generate.py  noise_test.py  train.py
src/modeling/models/: discriminator.py  generator.py  view.py
src/modeling/trainers/: __init__.py  dcgan_trainer.py
src/utils/: __init__.py  noise.py
tests/: test_noise.py
